--- a/dotfiles/.config/qtile/widget_config.ini
+++ b/dotfiles/.config/qtile/widget_config.ini
@@ -1,7 +1,7 @@
 # An icon on bottom left
 [image]
 margin = 3
-icon_path = /home/terrencetec/.config/qtile/icon.png
+#icon_path = /home/terrencetec/.config/qtile/icon.png
 
 # Workspaces
 [group_box]
@@ -38,16 +38,16 @@ icon_size = 24
 [wlan]
 # Get this from ip addr or nmcli d
 interface = wlp3s0
-format = W:{percent:2.0%}
+format = W:{percent:2.0%%}
 disconnect_message = W:DC!
 
 # Memory usage
 [memory]
-format = M:{MemPercent}%}
+format = M:{MemPercent}%%}
 
 # CPU load
 [cpu]
-format = C:{load_percent:4.1f}%
+format = C:{load_percent:4.1f}%%
 
 # CPU temperature
 [thermal_sensor]
@@ -56,8 +56,10 @@ tag_sensor = Package id 0
 fmt = {}  
 padding = 3
 update_interval = 1
-font =
-font_size =
+# Uncomment below to select font, fontsize, and foreground.
+# font = monospace
+# fontsize = 18
+# foreground = #00FF66
 
 # Volume
 [volume]
@@ -67,13 +69,15 @@ volume_app = pavucontrol
 # Battery
 # Uncomment this section for a battery widget
 [battery]
-format = B:{char} {percent2.0%} {hour:d}:{min:02d}
+format = B:{char} {percent2.0%%} {hour:d}:{min:02d}
 discharge_char = v
 full_char = =
 update_interval = 5
 
 # Clock
 [clock]
-format = %I:%M:%S %p\n%Y-%m-%d %a
-fontsize =
+format = %%I:%%M:%%S %%p
+	%%Y-%%m-%%d %%a
+# Uncomment below to select fontsize
+# fontsize = 9
 padding = 8
