--- a/dotfiles/.config/qtile/config.ini
+++ b/dotfiles/.config/qtile/config.ini
@@ -1,26 +1,61 @@
+[bar]
+# Default size is screen height divided by 45.
+# Uncomment to override
+# size = 32
+
+background = #000000
+
+opacity = 1
+
+# Widgets
+[widget]
+# Default font for widgets
+font = DejaVuSansMono Nerd Font Mono
+
+# Font size derived from bar size.
+# Uncomment to override
+# fontsize = 18
+
+# Default foreground color for widgets
+foreground = #00FF66
+
+
 # An icon on bottom left
 [image]
 margin = 3
-#icon_path = /home/terrencetec/.config/qtile/icon.png
+
+# Path of the image. Defaults to ~/.config/qtile/icon.png.
+# Uncomment below to override.
+# icon_path = /path/to/.config/qtile/icon.png
 
 # Workspaces
 [group_box]
 active_color = #AAAAAA
-block_highlight_text_color = #00FF66
+
+# Uncomment to override.
+#block_highlight_text_color = #00FF66
+
 borderwidth = 3
 highlight_method = line
 
 # Tasks list
 [task_list]
 border_color = #666666
+
 unfocused_border_color = #333333 
+
 border_width = 1
+
 # Uncomment to change font
 # font = monospace 
+
 margin = 3
+
 # FIXME Derive this width instead
 max_title_width = 250
+
 padding = 4
+
 rounded = False
 
 # Display current layout
@@ -38,7 +73,9 @@ icon_size = 24
 [wlan]
 # Get this from ip addr or nmcli d
 interface = wlp3s0
+
 format = W:{percent:2.0%%}
+
 disconnect_message = W:DC!
 
 # Memory usage
@@ -53,9 +90,13 @@ format = C:{load_percent:4.1f}%%
 [thermal_sensor]
 # Discover tag_sensor by the sensors command. Need the lm_sensors packages
 tag_sensor = Package id 0
+
 fmt = {}  
+
 padding = 3
+
 update_interval = 1
+
 # Uncomment below to select font, fontsize, and foreground.
 # font = monospace
 # fontsize = 18
@@ -64,20 +105,26 @@ update_interval = 1
 # Volume
 [volume]
 fmt = V:{:>4}
+
 volume_app = pavucontrol
 
 # Battery
 # Uncomment this section for a battery widget
 [battery]
 format = B:{char} {percent2.0%%} {hour:d}:{min:02d}
+
 discharge_char = v
+
 full_char = =
+
 update_interval = 5
 
 # Clock
 [clock]
 format = %%I:%%M:%%S %%p
 	%%Y-%%m-%%d %%a
+
 # Uncomment below to select fontsize
 # fontsize = 9
+
 padding = 8
