--- a/dotfiles/.config/qtile/config.ini
+++ b/dotfiles/.config/qtile/config.ini
@@ -74,13 +74,13 @@ icon_size = 24
 # Get this from ip addr or nmcli d
 interface = wlp3s0
 
-format = W:{percent:2.0%%}
+format = W:{percent:4.0f}%%
 
 disconnect_message = W:DC!
 
 # Memory usage
 [memory]
-format = M:{MemPercent}%%}
+format = M:{MemPercent:4.1f}%%
 
 # CPU load
 [cpu]
@@ -111,7 +111,7 @@ volume_app = pavucontrol
 # Battery
 # Uncomment this section for a battery widget
 [battery]
-format = B:{char} {percent2.0%%} {hour:d}:{min:02d}
+format = B:{char} {percent:2.0f}%% {hour:d}:{min:02d}
 
 discharge_char = v
 
