qtile screens and layout

--- a/dotfiles/.config/qtile/config.ini
+++ b/dotfiles/.config/qtile/config.ini
@@ -1,24 +1,51 @@
+# Monitor settings.
+[monitor]
+# These are fallback values in case screeninfo cannot detect the monitors.
+width = 2560
+height = 1440
+
+
+# Layout settings
+[layout]
+border_focus = #FF6600
+border_normal = #000000
+border_width = 1
+
+# Calculated according to screen size.
+# Defaults to 16/2560 of the screen width
+# Uncomment below to override
+; margin = 16
+
+# Ratio between the main and secondary windows in width for MonadTall layout.
+ratio = 0.618
+
+
+# bar settings
 [bar]
+background = #000000
+opacity = 1
+
 # Default size is screen height divided by 45.
 # Uncomment to override
 # size = 32
 
-background = #000000
 
-opacity = 1
-
-# Widgets
+# Widgets defaults
 [widget]
 # Default font for widgets
 font = DejaVuSansMono Nerd Font Mono
+
+# Default foreground color for widgets
+foreground = #00FF66
 
 # Font size derived from bar size.
 # Uncomment to override
 # fontsize = 18
 
-# Default foreground color for widgets
-foreground = #00FF66
 
+# Config widgets below.
+# Uncomment a section to make the widget available.
+# Comment a section to disable the widget.
 
 # An icon on bottom left
 [image]
@@ -28,46 +55,47 @@ margin = 3
 # Uncomment below to override.
 # icon_path = /path/to/.config/qtile/icon.png
 
+
 # Workspaces
 [group_box]
 active_color = #AAAAAA
+borderwidth = 3
+highlight_method = line
 
 # Uncomment to override.
 #block_highlight_text_color = #00FF66
 
-borderwidth = 3
-highlight_method = line
 
 # Tasks list
 [task_list]
 border_color = #666666
-
 unfocused_border_color = #333333 
-
 border_width = 1
-
-# Uncomment to change font
-# font = monospace 
-
 margin = 3
 
 # FIXME Derive this width instead
 max_title_width = 250
 
 padding = 4
-
 rounded = False
+
+# Uncomment to change font
+# font = monospace 
+
 
 # Display current layout
 [current_layout]
 fmt = {0:>9s}
 
+
 # The command prompt when pressing Ctrl+r
 [prompt]
 
+
 # System tray
 [systray]
-icon_size = 24
+# Uncomment below to override icon side
+; icon_size = 24
 
 # Connection status
 [wlan]
@@ -75,26 +103,26 @@ icon_size = 24
 interface = wlp3s0
 
 format = W:{percent:4.0f}%%
-
 disconnect_message = W:DC!
+
 
 # Memory usage
 [memory]
 format = M:{MemPercent:4.1f}%%
 
+
 # CPU load
 [cpu]
 format = C:{load_percent:4.1f}%%
 
+
 # CPU temperature
 [thermal_sensor]
-# Discover tag_sensor by the sensors command. Need the lm_sensors packages
+# Discover tag_sensor by the sensors command. Requires lm_sensors packages
 tag_sensor = Package id 0
 
 fmt = {}  
-
 padding = 3
-
 update_interval = 1
 
 # Uncomment below to select font, fontsize, and foreground.
@@ -102,29 +130,30 @@ update_interval = 1
 # fontsize = 18
 # foreground = #00FF66
 
+
 # Volume
 [volume]
 fmt = V:{:>4}
-
 volume_app = pavucontrol
 
 # Battery
 # Uncomment this section for a battery widget
-[battery]
-format = B:{char} {percent:2.0f}%% {hour:d}:{min:02d}
+; [battery]
+; format = B:{char} {percent:2.0f}%% {hour:d}:{min:02d}
 
-discharge_char = v
+; discharge_char = v
 
-full_char = =
+; full_char = =
 
-update_interval = 5
+; update_interval = 5
+
 
 # Clock
 [clock]
 format = %%I:%%M:%%S %%p
 	%%Y-%%m-%%d %%a
 
+padding = 8
+
 # Uncomment below to select fontsize
 # fontsize = 9
-
-padding = 8
