--- a/dotfiles/.config/qtile/workspaces.ini
+++ b/dotfiles/.config/qtile/workspaces.ini
@@ -8,46 +8,46 @@
 # mod + shift + key: move window and switch to workspace
 # To modify the shortcuts, change settings in shortcuts.ini.
 [1]
-key = "1"
-launch = "urxvt & urxvt -e htop & urxvt -e tty-clock -sct &"
-layout = "monadtall"
+key = 1
+launch = urxvt & urxvt -e htop & urxvt -e tty-clock -sct &
+layout = monadtall
 
 [2]
-key = "2"
-launch = ""
-layout = "max"
+key = 2
+launch = 
+layout = max
 
 [3]
-key = "3"
-launch = ""
-layout = "max"
+key = 3
+launch = 
+layout = max
 
 [4]
-key = "4"
-launch = ""
-layout = "max"
+key = 4
+launch = 
+layout = max
 
 [5]
-key = "5"
-launch = ""
-layout = "max"
+key = 5
+launch = 
+layout = max
 
 [6]
-key = "6"
-launch = ""
-layout = "max"
+key = 6
+launch = 
+layout = max
 
 [7]
-key = "7"
-launch = ""
-layout = "max"
+key = 7
+launch = 
+layout = max
 
 [vbox]
-key = "v"
-launch = ""
-layout = "max"
+key = v
+launch = 
+layout = max
 
 [msg]
-key = "m"
-launch = "signal-desktop --disable-gpu --use-tray-icon &"
-layout = "max"
+key = m
+launch = signal-desktop --disable-gpu --use-tray-icon &
+layout = max
