Qtile floating layout

--- a/dotfiles/.config/qtile/config.ini
+++ b/dotfiles/.config/qtile/config.ini
@@ -1,3 +1,13 @@
+[qtile]
+auto_full_screen = True
+bring_front_click = False
+cursor_warp = False
+focus_on_window_activation = never
+follow_mouse_focus = True
+reconfigure_screens = True
+wmname = Qtile
+auto_minimize = True
+
 # Monitor settings.
 [monitor]
 # These are fallback values in case screeninfo cannot detect the monitors.
