qtile won't accept & sign with multiple cmds

--- a/dotfiles/.config/qtile/workspaces.ini
+++ b/dotfiles/.config/qtile/workspaces.ini
@@ -9,7 +9,7 @@
 # To modify the shortcuts, change settings in shortcuts.ini.
 [1]
 key = 1
-launch = urxvt & urxvt -e htop & urxvt -e tty-clock -sct &
+launch = urxvt & urxvt -e htop & urxvt -e tty-clock -sct
 layout = monadtall
 
 [2]
@@ -49,5 +49,5 @@ layout = max
 
 [msg]
 key = m
-launch = signal-desktop --disable-gpu --use-tray-icon &
+launch = signal-desktop --disable-gpu --use-tray-icon
 layout = max
