--- a/dotfiles/.config/qtile/config.ini
+++ b/dotfiles/.config/qtile/config.ini
@@ -112,7 +112,7 @@ fmt = {0:>9s}
 # Get this from ip addr or nmcli d
 interface = wlp3s0
 
-format = W:{percent:4.0f}%%
+format = W:{percent:2.1%%}
 disconnect_message = W:DC!
 
 
