thermal sensor widget. Use python string format to add trailing space instead of the temprary fix

--- a/dotfiles/.config/qtile/config.ini
+++ b/dotfiles/.config/qtile/config.ini
@@ -131,7 +131,7 @@ format = C:{load_percent:4.1f}%%
 # Discover tag_sensor by the sensors command. Requires lm_sensors packages
 tag_sensor = Package id 0
 
-fmt = "{} " 
+fmt = {:<7} 
 padding = 3
 update_interval = 1
 
