Qilte battery widget text formatting

--- a/dotfiles/.config/qtile/config.ini
+++ b/dotfiles/.config/qtile/config.ini
@@ -149,7 +149,7 @@ volume_app = pavucontrol
 # Battery
 # Uncomment this section for a battery widget
 ; [battery]
-; format = B:{char} {percent:2.0f}%% {hour:d}:{min:02d}
+; format = B:{char} {percent:2.0%%} {hour:d}:{min:02d}
 
 ; discharge_char = v
 
